# ingestion

./: .gitignore  CMakeLists.txt  Makefile  PANEL_INGESTION.md  README.md  create_placeholder_docket.sql  search_opinioncluster_placeholders.csv
.github/workflows/: ci.yml
examples/: CMakeLists.txt  calculator.cpp  malformed.csv  panel_sample.csv  sample.csv
include/: hello.h  opinion.h  opinion_cited.h  opinion_cited_db.h  opinion_cluster.h  opinion_cluster_db.h  opinion_cluster_panel.h  opinion_cluster_panel_db.h  opinion_db.h  opinion_joined_by.h  opinion_joined_by_db.h  parenthetical.h  parenthetical_db.h  search_citation.h  search_citation_db.h
src/: citation_main.cpp  cluster_main.cpp  hello.cpp  joined_by_main.cpp  main.cpp  opinion.cpp  opinion_cited.cpp  opinion_cited_db.cpp  opinion_cluster.cpp  opinion_cluster_db.cpp  opinion_cluster_panel.cpp  opinion_cluster_panel_db.cpp  opinion_db.cpp  opinion_joined_by.cpp  opinion_joined_by_db.cpp  panel_main.cpp  parenthetical.cpp  parenthetical_db.cpp  parenthetical_main.cpp  search_citation.cpp  search_citation_db.cpp  search_citation_main.cpp
tests/: hello_test.cpp  opinion_test.cpp
